@@ -501,6 +501,8 @@ PANOPTICON_MAIN_SITES_LBL_PHP_SECURITY_MAINTENANCE=This PHP version is in Securi
 PANOPTICON_MAIN_SITES_LBL_EXT_STUCK_UPDATE=ACTION REQUIRED. The extensions update task is stuck.
 PANOPTICON_MAIN_SITES_LBL_CORE_STUCK_UPDATE=ACTION REQUIRED. The Joomla!™ update task is stuck.
 PANOPTICON_MAIN_SITES_LBL_CORE_SCHEDULED_UPDATE=The Joomla!™ core update has been scheduled to run automatically.
+PANOPTICON_MAIN_SITES_LBL_CORE_RUNNING_UPDATE=The Joomla!™ core update is currently running.
+PANOPTICON_MAIN_SITES_LBL_EXT_RUNNING_UPDATE=Extension updates are currently taking place.
 PANOPTICON_MAIN_SITES_LBL_EXT_SCHEDULED_UPDATE=Extension updates have been scheduled to run automatically.
 PANOPTICON_MAIN_SITES_LBL_NO_RESULTS=There are no sites matching your search and filter criteria.
 PANOPTICON_MAIN_SITES_LBL_IDENTITY_HEAD=Service Identity
